# Py_Course_HW

./: README.md  pyproject.toml
src/: masks.py  proccesing.py  widget.py
