[project]
name = "py-course-hw"
version = "0.1.0"
description = ""
authors = [
    {name = "AHeroWith2Arms",email = "kirillvalentinka@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
setuptools = "^78.1.0"

